<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">


        <!-- general information -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:text="@string/labelApplicationDescription1" />


        <!-- how it works -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:text="@string/labelHowItWorksHeading"
            android:theme="@style/HeadingTextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:text="@string/labelDoubleClickDescription1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:text="@string/labelVibrationPatternDescription1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:text="@string/labelVibrationPatternDescription2" />


        <!-- time format examples -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatExampleHeading"
            android:theme="@style/HeadingTextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:fontFamily="serif-monospace"
            android:text="@string/labelTimeFormatExample1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:fontFamily="serif-monospace"
            android:text="@string/labelTimeFormatExample2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:fontFamily="serif-monospace"
            android:text="@string/labelTimeFormatExample3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:fontFamily="serif-monospace"
            android:text="@string/labelTimeFormatExample4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:fontFamily="serif-monospace"
            android:text="@string/labelTimeFormatExample5" />


        <!-- time format explanation -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatExplanationHeading"
            android:theme="@style/HeadingTextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatExplanation1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatExplanation2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatExplanation3" />



        <!-- gaps -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatGapHeading"
            android:theme="@style/HeadingTextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatGapDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatGap1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatGap2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelTimeFormatGap3" />


        <!-- additional features -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:text="@string/labelAdditionalFeaturesHeading"
            android:theme="@style/HeadingTextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelAdditionalFeaturesDescription1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelAdditionalFeaturesDescription2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelAdditionalFeaturesDescription3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelAdditionalFeaturesDescription4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:focusable="true"
            android:text="@string/labelAdditionalFeaturesDescription5" />

    </LinearLayout>
</ScrollView>
